--- a/documents/references.bib
+++ b/documents/references.bib
@@ -85,3 +85,12 @@
   year={1996},
   publisher={World Scientific}
 }
+
+@misc{BNO055datasheet,
+  author = {Bosch Sensortec},
+  title = {{BNO055: Intelligent 9-axis absolute orientation sensor}},
+  year = 2014,
+  howpublished = {\url{https://www.adafruit.com/datasheets/BST_BNO055_DS000_12.pdf}},
+  note = {Accessed: 2016-01-28},
+}
+
