--- a/documents/references.bib
+++ b/documents/references.bib
@@ -94,3 +94,154 @@
   note = {Accessed: 2016-01-28},
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Commercial Solutions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@misc{OculusTouch1,
+  author = {Erik Frederiksen},
+  title = {{Oculus Touch will be your virtual hands}},
+  year = 2015,
+  howpublished = {\url{http://www.technobuffalo.com/2015/06/11/oculus-touch-will-be-your-virtual-hands/}},
+  note = {Accessed: 2016-03-01},
+}
+
+@misc{OculusTouch2,
+  author = {Josh Constine},
+  title = {{Oculus Previews Oculus Touch Handheld Motion-Tracking Haptic Controllers}},
+  year = 2015,
+  howpublished = {\url{http://techcrunch.com/2015/06/11/oculus-touch/}},
+  note = {Accessed: 2016-03-01},
+}
+
+@misc{OculusTouchDelay,
+  author = {Brandon Russell},
+  title = {{Oculus Touch delayed into second half of 2016}},
+  year = 2015,
+  howpublished = {\url{http://www.technobuffalo.com/2015/12/31/oculus-touch-delayed-2016/}},
+  note = {Accessed: 2016-03-01},
+}
+
+@misc{ValveControllers,
+  author = {Adi Robertson},
+  title = {{Valve's virtual reality headset is great, but its controllers are the real story}},
+  year = 2015,
+  howpublished = {\url{http://www.theverge.com/2015/3/4/8150653/valve-steam-controller-vive-vr-gdc-2015}},
+  note = {Accessed: 2016-03-01},
+}
+
+@misc{TiltBrush,
+  author = {Dean Takahashi},
+  title = {{Google's Tilt Brush on the HTC Vive VR headset will make you feel like a 3D artist}},
+  year = 2016,
+  howpublished = {\url{http://venturebeat.com/2016/03/06/googles-tilt-brush-on-the-htc-vive-vr-headset-will-make-you-feel-like-a-3d-artist/}},
+  note = {Accessed: 2016-03-06},
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Application-specific - 3D Interaction
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@inproceedings{hand1997,
+  title={A survey of 3D interaction techniques},
+  author={Hand, Chris},
+  booktitle={Computer graphics forum},
+  volume={16},
+  number={5},
+  pages={269--281},
+  year={1997},
+  organization={Wiley Online Library}
+}
+
+@article{zhai1998,
+  title={User performance in relation to 3D input device design},
+  author={Zhai, Shumin},
+  journal={ACM Siggraph Computer Graphics},
+  volume={32},
+  number={4},
+  pages={50--54},
+  year={1998},
+  publisher={ACM}
+}
+
+@inproceedings{wang20116d,
+  title={6D hands: markerless hand-tracking for computer aided design},
+  author={Wang, Robert and Paris, Sylvain and Popovi{\'c}, Jovan},
+  booktitle={Proceedings of the 24th annual ACM symposium on User interface software and technology},
+  pages={549--558},
+  year={2011},
+  organization={ACM}
+}
+
+@article{keefe2007,
+  title={Drawing on air: Input techniques for controlled 3D line illustration},
+  author={Keefe, Daniel F and Zeleznik, Robert C and Laidlaw, David H},
+  journal={Visualization and Computer Graphics, IEEE Transactions on},
+  volume={13},
+  number={5},
+  pages={1067--1081},
+  year={2007},
+  publisher={IEEE}
+}
+
+@inproceedings{hinckley1997,
+  title={Usability analysis of 3D rotation techniques},
+  author={Hinckley, Ken and Tullio, Joe and Pausch, Randy and Proffitt, Dennis and Kassell, Neal},
+  booktitle={Proceedings of the 10th annual ACM symposium on User interface software and technology},
+  pages={1--10},
+  year={1997},
+  organization={ACM}
+}
+
+
+@inproceedings{keefe2001cavepainting,
+  title={CavePainting: a fully immersive 3D artistic medium and interactive experience},
+  author={Keefe, Daniel F and Feliz, Daniel Acevedo and Moscovich, Tomer and Laidlaw, David H and LaViola Jr, Joseph J},
+  booktitle={Proceedings of the 2001 symposium on Interactive 3D graphics},
+  pages={85--93},
+  year={2001},
+  organization={ACM}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Application-specific - VR Tracking
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{rolland2001,
+  title={A survey of tracking technology for virtual environments},
+  author={Rolland, Jannick P and Davis, Larry and Baillot, Yohan},
+  journal={Fundamentals of wearable computers and augmented reality},
+  volume={1},
+  pages={67--112},
+  year={2001},
+  publisher={Mahwah, NJ: Lawrence Erlbaum}
+}
+
+
+@inproceedings{ribo2001,
+  title={A new optical tracking system for virtual and augmented reality applications},
+  author={Ribo, Miguel and Pinz, Axel and Fuhrmann, Anton L},
+  booktitle={Instrumentation and Measurement Technology Conference, 2001. IMTC 2001. Proceedings of the 18th IEEE},
+  volume={3},
+  pages={1932--1936},
+  year={2001},
+  organization={IEEE}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Technical Contstraints
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{welch2002,
+  title={Motion tracking survey},
+  author={Welch, Greg and Foxlin, Eric},
+  journal={IEEE Computer graphics and Applications},
+  pages={24--38},
+  year={2002}
+}
+
+@techreport{kolasinski1995,
+  title={Simulator Sickness in Virtual Environments.},
+  author={Kolasinski, Eugenia M},
+  year={1995},
+  institution={DTIC Document}
+}
